--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">ListViewStudy</string>
+    <string name="next">&gt;</string>
+    <string name="last">&gt;&gt;</string>
+    <string name="previous">&lt;</string>
+    <string name="first">&lt;&lt;</string>
+    <string name="displayshort">%1$s - %2$s of %3$s</string>
 </resources>
