Finish description view with an ugly design...

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="previous">&lt;</string>
     <string name="first">&lt;&lt;</string>
     <string name="displayshort">%1$s - %2$s of %3$s</string>
+    <string name="img_prod">Image of the product</string>
 </resources>
