Edit the package name to look nicer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ListViewStudy</string>
+    <string name="app_name">BestBuy Search App - vvanni</string>
     <string name="next">&gt;</string>
     <string name="last">&gt;&gt;</string>
     <string name="previous">&lt;</string>
